@@ -1,2 +1,4 @@
 requires 'perl', '5.008005';
+
 test_requires 'Test::More', '0.96';
+test_requires 'JSON';
