@@ -2,7 +2,7 @@ package Pandoc::Elements;
 
 use strict;
 use 5.008_005;
-our $VERSION = '0.01';
+our $VERSION = '0.02';
 
 our %ELEMENTS = (
     # Constructors for block elements
@@ -86,7 +86,7 @@ __END__
 
 =head1 NAME
 
-Pandoc::Elements - utility functions to create Pandoc documents
+Pandoc::Elements - utility functions to create and process Pandoc documents
 
 =head1 SYNOPSIS
 
@@ -114,10 +114,11 @@ an equivalent Pandoc Markdown document would be
 
 =head1 DESCRIPTION
 
-Pandoc::Elements provides utility functions to create an abstract syntax trees
+Pandoc::Elements provides utility functions to create abstract syntax trees
 (AST) of L<Pandoc|http://johnmacfarlane.net/pandoc/> documents. The resulting
 data structure can be processed by pandoc to be converted an many other
-document formats, such as HTML, LaTeX, ODT, and ePUB. 
+document formats, such as HTML, LaTeX, ODT, and ePUB. The module
+L<Pandoc::Walker> contains functions for processing the AST in Perl.
 
 A future versions of this module may upgrade the data structures to blessed
 objects, so better encode JSON as following:
@@ -126,7 +127,7 @@ objects, so better encode JSON as following:
 
 =head1 FUNCTIONS
 
-=head1 BLOCK ELEMENTS
+=head2 BLOCK ELEMENTS
 
 BlockQuote, BulletList, CodeBlock, DefinitionList, Div, Header, HorizontalRule,
 Null, OrderedList, Para, Plain, RawBlock, Table
@@ -140,11 +141,13 @@ SmallCaps, Space, Span, Str, Strikeout, Strong, Subscript, Superscript
 
 MetaBlocks, MetaBool, MetaInlines, MetaList, MetaMap, MetaString
 
-=head2 Document
+=head3 Document
 
 Root element, consisting of metadata hash and document element array.
 
-=head2 attributes
+=head2 ADDITIONAL FUNCTIONS
+
+=head3 attributes
 
 Maps a hash reference into an attributes list with id, classes, and ordered
 key-value pairs.
@@ -165,7 +168,7 @@ it under the same terms as Perl itself.
 See L<Text.Pandoc.Definition|https://hackage.haskell.org/package/pandoc-types/docs/Text-Pandoc-Definition.html>
 for the original definition of Pandoc document data structure in Haskell.
 
-See L<Pandoc::Filter> for a module to implement L<pandoc
+See L<Pandoc::Walker> for a module to implement L<pandoc
 filters|http://johnmacfarlane.net/pandoc/scripting.html>.
 
 =cut
